--- a/frontend/src/Styles.module.css
+++ b/frontend/src/Styles.module.css
@@ -30,10 +30,9 @@
 }
 
 .sites {
-    /* height: 200px;
+    height: 200px;
     overflow-y: auto;
-    border: 1px solid #ccc;
-    padding: 10px; */
+    padding: 10px;
     border: solid 1px;
 }
 
